--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -4,11 +4,11 @@
     <base id="base" href="${base}">
     <meta charset="UTF-8">
     <title th:text="登录"></title>
-    <link rel="stylesheet" type="text/css" href="../../static/login/css/normalize.css" th:src="@{/login/css/normalize.css}"/>
-    <link rel="stylesheet" type="text/css" href="../../static/login/css/demo.css" th:src="@{/login/css/demo.css}"/>
+    <link rel="stylesheet" type="text/css" href="../../static/login/css/normalize.css" th:href="@{/login/css/normalize.css}"/>
+    <link rel="stylesheet" type="text/css" href="../../static/login/css/demo.css" th:href="@{/login/css/demo.css}"/>
     <!--必要样式-->
-    <link rel="stylesheet" type="text/css" href="../../static/login/css/component.css" th:src="@{/login/css/component.css}"/>
-    <link rel="stylesheet" type="text/css" href="../../static/layui/css/layui.css" th:src="@{/layui/css/layui.css}"/>
+    <link rel="stylesheet" type="text/css" href="../../static/login/css/component.css" th:href="@{/login/css/component.css}"/>
+    <link rel="stylesheet" type="text/css" href="../../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"/>
     <script type="text/javascript" src="../../static/jquery/jquery-3.3.1.js" th:src="@{/jquery/jquery-3.3.1.js}"></script>
     <script type="text/javascript" src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 </head>
